--- a/admission.html
+++ b/admission.html
@@ -277,10 +277,11 @@
                 <div class="kingster-top-bar-container kingster-container ">
                     <div class="kingster-top-bar-container-inner clearfix">
                         <div class="kingster-top-bar-left kingster-item-pdlr"><i class="fa fa-envelope-open-o"
-                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i> Info@raffles-me.com <i
+                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a>  <i
                                 class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                            +966 11 281 5126</div>
+                            <a href="tel:+966 11 281 5126">+966 11 281 5126</a>
+                                </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <!-- <ul id="kingster-top-bar-menu"
                                         class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
@@ -315,7 +316,7 @@
                         <div class="kingster-navigation kingster-item-pdlr clearfix ">
                             <div class="kingster-main-menu" id="kingster-main-menu">
                                 <ul id="menu-main-navigation-1" class="sf-menu">
-                                    <li class="menu-item menu-item-home current-menu-item kingster-normal-menu">
+                                    <li class="menu-item kingster-normal-menu">
                                         <a href="index.html" class="sf-with-ul-pre">Home</a>
                                         <!-- <ul class="sub-menu">
                                             <li class="menu-item menu-item-home" data-size="60"><a
@@ -517,7 +518,8 @@
                                     <li class="menu-item kingster-normal-menu"><a
                                             href="scholarships.html">Scholarships</a>
                                     </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="admission.html">Admission
+                                    <li class="menu-item current-menu-item kingster-normal-menu"><a
+                                            href="admission.html">Admission
                                         </a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="contact.html">Contact Us
                                         </a></li>
@@ -594,7 +596,7 @@
                                                 <div role="form" class="wpcf7" id="wpcf7-f5439-p5433-o1" lang="en-US"
                                                     dir="ltr">
                                                     <div class="screen-reader-response"></div>
-                                                    <form action="#" method="post" class="wpcf7-form"
+                                                    <form id="form" action="#" method="post" class="wpcf7-form"
                                                         novalidate="novalidate">
 
                                                         <p><span class="wpcf7-form-control-wrap your-name">
@@ -672,7 +674,7 @@
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="Mobile*" />
                                                             </span></p>
-                                                            <br>
+                                                        <br>
                                                         <p class="p-about4"><span
                                                                 class="wpcf7-form-control-wrap your-name">Father's Name
                                                                 <hr class="p-about4">
@@ -699,7 +701,7 @@
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="Father's Occupation*" />
                                                             </span></p>
-                                                            <br>
+                                                        <br>
                                                         <p class="p-about4"><span
                                                                 class="wpcf7-form-control-wrap your-name">Mother's Name
                                                                 <hr class="p-about4">
@@ -726,7 +728,7 @@
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="Mother's Occupation*" />
                                                             </span></p>
-                                                            <br>
+                                                        <br>
                                                         <p class="p-about4">Emergency Contact Information
                                                             <hr class="p-about4">
                                                         </p>
@@ -751,7 +753,7 @@
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="Emergency Contact Relation*" />
                                                             </span></p>
-                                                            <br>
+                                                        <br>
                                                         <p class="p-about4">
                                                             <span
                                                                 class="wpcf7-form-control-wrap country-dropdown">Emergency
@@ -805,20 +807,19 @@
                                                             your education in Raffles Design institute. This information
                                                             must be provided at the point of application. Disclosure of
                                                             disability is treated confidentially.</p>
-                                                        <form action="">
+                                                        <form id="form1" action="">
                                                             <div class="form-check">
                                                                 <input class="form-check-input" type="radio"
-                                                                    name="flexRadioDefault" id="flexRadioDefault1">
-                                                                <label class="form-check-label p-about5"
+                                                                    name="form1option" id="flexRadioDefault1">
+                                                                <label class="form-check-label padding-radio p-about5"
                                                                     for="flexRadioDefault1">
                                                                     Yes
                                                                 </label>
                                                             </div>
                                                             <div class="form-check">
                                                                 <input class="form-check-input" type="radio"
-                                                                    name="flexRadioDefault" id="flexRadioDefault2"
-                                                                    >
-                                                                <label class="form-check-label p-about5"
+                                                                    name="form1option" id="flexRadioDefault2">
+                                                                <label class="form-check-label padding-radio p-about5"
                                                                     for="flexRadioDefault2">
                                                                     No
                                                                 </label>
@@ -925,28 +926,28 @@
                                                             Testing System) with a minimum score of 5.0, taken during
                                                             the last two years</p>
 
-                                                        <form action="">
+                                                        <form id="form2" action="">
                                                             <div class="form-check">
                                                                 <input class="form-check-input" type="radio"
-                                                                    name="flexRadioDefault" id="flexRadioDefault1">
+                                                                    name="form2option" id="flexRadioDefault3">
                                                                 <label class="form-check-label padding-radio p-about5"
-                                                                    for="flexRadioDefault1">
+                                                                    for="flexRadioDefault3">
                                                                     IELTS
                                                                 </label>
                                                             </div>
                                                             <div class="form-check">
                                                                 <input class="form-check-input" type="radio"
-                                                                    name="flexRadioDefault" id="flexRadioDefault2">
+                                                                    name="form2option" id="flexRadioDefault4">
                                                                 <label class="form-check-label padding-radio p-about5"
-                                                                    for="flexRadioDefault2">
+                                                                    for="flexRadioDefault4">
                                                                     TOEFL
                                                                 </label>
                                                             </div>
                                                             <div class="form-check">
                                                                 <input class="form-check-input" type="radio"
-                                                                    name="flexRadioDefault" id="flexRadioDefault2">
+                                                                    name="form2option" id="flexRadioDefault5">
                                                                 <label class="form-check-label padding-radio p-about5"
-                                                                    for="flexRadioDefault2">
+                                                                    for="flexRadioDefault5">
                                                                     None
                                                                 </label>
                                                             </div>
@@ -972,13 +973,16 @@
                                                                     name="special-request" cols="40" rows="10"
                                                                     class="wpcf7-form-control wpcf7-textarea"
                                                                     aria-invalid="false"
-                                                                    placeholder="Type your message here.."></textarea></span></p>
+                                                                    placeholder="Type your message here.."></textarea></span>
+                                                        </p>
 
-                                                        <a class="terms" href="terms-conditions.html">Terms & Conditions</a>
+                                                        <a class="terms" href="terms-conditions.html">Terms &
+                                                            Conditions</a>
                                                         <div class="form-check">
                                                             <input class="form-check-input" type="checkbox" value=""
                                                                 id="flexCheckDefault">
-                                                            <label class="form-check-label p-about4" for="flexCheckDefault">
+                                                            <label class="form-check-label padding-radio p-about4"
+                                                                for="flexCheckDefault">
                                                                 I agree to the terms & conditions
                                                             </label>
                                                         </div>
@@ -1001,6 +1005,14 @@
                 </div>
             </div>
         </div>
+
+
+        <div>
+            <a href="https://wa.me/" class="float" target="_blank">
+                <i class="fa fa-whatsapp my-float" style="margin-top: 15px;"></i>
+            </a>
+        </div>
+
 
         <section class="subscription-block">
             <div>
