--- a/contact.html
+++ b/contact.html
@@ -189,10 +189,11 @@
                 <div class="kingster-top-bar-container kingster-container ">
                     <div class="kingster-top-bar-container-inner clearfix">
                         <div class="kingster-top-bar-left kingster-item-pdlr"><i class="fa fa-envelope-open-o"
-                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i> Info@raffles-me.com <i
+                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a>  <i
                                 class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                            +966 11 281 5126</div>
+                            <a href="tel:+966 11 281 5126">+966 11 281 5126</a>
+                                </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <!-- <ul id="kingster-top-bar-menu"
                                         class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
@@ -428,7 +429,7 @@
                                     </li> -->
                                     <li class="menu-item kingster-normal-menu"><a href="scholarships.html">Scholarships</a>
                                     </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="#">Admission
+                                    <li class="menu-item kingster-normal-menu"><a href="admission.html">Admission
                                         </a></li>
                                     <li class="menu-item current-menu-item kingster-normal-menu"><a href="contact.html">Contact Us
                                         </a></li>
@@ -471,7 +472,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
                                         <div class="gdlr-core-title-item-title-wrap clearfix">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 55px ;font-weight: 300 ;letter-spacing: 0px ;text-transform: uppercase ;color: #EB8223 ;background-color: white;padding: 20px 40px 20px 40px;">Contact Us</h3></div><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption" style="font-size: 35px ;font-style: normal ;color: #f2f2f2 ;margin-top: 25px ;">OUR JOURNEY IS JUST BEGINNING. JOIN US
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 55px ;font-weight: 300 ;letter-spacing: 0px ;text-transform: uppercase ;color: #EB8223 ;background-color: white;padding: 20px 40px 20px 40px;">Contact Us</h3></div><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption" style="font-size: 35px ;font-style: normal ;color: #f2f2f2 ;margin-top: 25px ;">OUR JOURNEY IS JUST BEGINNING. 
                                             </span></div>
                                         <hr class="custom-hr">
                                 </div>
