--- a/index.html
+++ b/index.html
@@ -281,10 +281,11 @@
                 <div class="kingster-top-bar-container kingster-container ">
                     <div class="kingster-top-bar-container-inner clearfix">
                         <div class="kingster-top-bar-left kingster-item-pdlr"><i class="fa fa-envelope-open-o"
-                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i> Info@raffles-me.com <i
+                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a>  <i
                                 class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                            +966 11 281 5126</div>
+                            <a href="tel:+966 11 281 5126">+966 11 281 5126</a>
+                                </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <!-- <ul id="kingster-top-bar-menu"
                                         class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
@@ -651,8 +652,8 @@
                                                             Be apart of our history</div> -->
                                                         <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme"
                                                             id="slide-6-layer-8" data-x="537" data-y="center"
-                                                            data-voffset="-10" data-width="['500']"
-                                                            data-height="['121']" data-type="shape"
+                                                            data-voffset="-10" data-width="['380']"
+                                                            data-height="['100']" data-type="shape"
                                                             data-responsive_offset="on"
                                                             data-frames='[{"delay":350,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
                                                             data-textAlign="['inherit','inherit','inherit','inherit']"
@@ -670,7 +671,7 @@
                                                             style="z-index: 7; white-space: nowrap; font-size: 80px; line-height: 80px; font-weight: 500; color: #ffffff; letter-spacing: 0px;font-family:Poppins;">
                                                             Raffles</div> -->
                                                         <div class="tp-caption   tp-resizeme" id="slide-6-layer-3"
-                                                            data-x="600" data-y="center" data-voffset="-15"
+                                                            data-x="570" data-y="center" data-voffset="-15"
                                                             data-width="['auto']" data-height="['auto']"
                                                             data-type="text" data-responsive_offset="on"
                                                             data-frames='[{"delay":690,"speed":300,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -1121,7 +1122,7 @@
                                                 <div
                                                     class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
                                                     <a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border"
-                                                        href="#" id="gdlr-core-button-id-44682"><span
+                                                        href="about-us.html" id="gdlr-core-button-id-44682"><span
                                                             class="gdlr-core-content" style="color: black ;">Read
                                                             More</span><i
                                                             class="gdlr-core-pos-right fa fa-long-arrow-right"
@@ -1165,7 +1166,7 @@
                                         <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle"
                                             style="border-width: 0px;">
                                             <a class="gdlr-core-lightgallery gdlr-core-js "
-                                                href="https://www.youtube.com/watch?v=C5pKtnmHTxg"><img
+                                                href="#"><img
                                                     src="upload/icon-play.png" alt="" width="82" height="82"
                                                     title="icon-play" /></a>
                                         </div>
@@ -1176,7 +1177,7 @@
                                         class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr">
                                         <div class="gdlr-core-title-item-title-wrap clearfix">
                                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob"
-                                                style="font-size: 46px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;color: #ffffff ;">
+                                                style="font-size: 40px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;color: #ffffff ;font-family: 'ITC Avant Garde Gothic';">
                                                 A Vibrant Campus</h3>
                                         </div>
                                     </div>
@@ -1186,14 +1187,14 @@
                                         style="padding-bottom: 0px ;">
                                         <div class="gdlr-core-text-box-item-content"
                                             style="font-size: 19px ;text-transform: none ;color: #ffffff ;">
-                                            <p class="txtmob1" style="font-weight: 200;">The campus of Raffles Desing
+                                            <p class="txtmob1" style="font-weight: 200;text-align: center;">The campus of Raffles Desing
                                                 Institute is located on Al-Orouba Street on the corner of Al-Amir Turki
                                                 Bin Abdulaziz Al Awal Road.
                                                 The campus of Raffles Design Institute is a vibrant independent campus
                                                 as it is located near many facilities such as:
                                                 (a hotel with a restaurant lounge – spa – gallery – restaurant),
                                             </p>
-                                            <p class="txtmob1" style="font-weight: 200;">and it is also located near the
+                                            <p class="txtmob1" style="font-weight: 200;text-align: center;">and it is also located near the
                                                 world-famous design and shopping center in Al-Olaya.
                                                 The campus of Raffles Design Institute provides a safe and comfortable
                                                 environment for learning and is equipped with
@@ -1218,13 +1219,9 @@
                                     style="width: 38%;">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js "
                                         style="min-height: 575px ;" data-sync-height="height-half">
-                                        <div class="gdlr-core-pbf-background-wrap">
-                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/posts\ \(1\).png) ;background-size: cover ;background-position: center ;"
-                                                data-parallax-speed="0"></div>
-                                        </div>
                                         <div
                                             class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content">
+                                            <img src="img/posts (1).png" style="width: 100%;" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -1268,7 +1265,7 @@
                                                 <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align "
                                                     style="padding-bottom: 0px ;"><a
                                                         class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border "
-                                                        href="#"
+                                                        href="admission.html"
                                                         style="font-size: 17px ;color: #ffffff ;padding: 10px 30px 10px 30px;text-transform: none ;border-radius: 2px;-moz-border-radius: 2px;-webkit-border-radius: 2px;"><span
                                                             class="gdlr-core-content txtmob1">Apply Now</span></a></div>
                                             </div>
@@ -1307,7 +1304,7 @@
                                                                 the corner ofAl-Amir Turki Bin
                                                                 Abdulaziz Al Awal Road.</p> <a
                                                                 class="gdlr-core-column-service-read-more gdlr-core-info-font"
-                                                                href="#"
+                                                                href="about-us.html"
                                                                 style="font-style: normal ;margin-top: 0px ;color: white;">Learn
                                                                 More</a>
                                                         </div>
@@ -1340,7 +1337,7 @@
                                                                 woldworld meets the vision of the 21st
                                                                 century.</p> <a
                                                                 class="gdlr-core-column-service-read-more gdlr-core-info-font"
-                                                                href="#"
+                                                                href="lifeinriyadh.html"
                                                                 style="font-style: normal ;margin-top: 0px ;color: white;">Learn
                                                                 More</a>
                                                         </div>
@@ -1372,7 +1369,7 @@
                                                                 students, rewarding interested, qualified
                                                                 and talented applicants on merit.</p> <a
                                                                 class="gdlr-core-column-service-read-more gdlr-core-info-font"
-                                                                href="#"
+                                                                href="scholarships.html"
                                                                 style="font-style: normal ;margin-top: 0px ;color: white;">Learn
                                                                 More</a>
                                                         </div>
@@ -1878,7 +1875,7 @@
                 </a>
             </div>
 
-            <section class="subscription-block">
+            <section class="subscription-block" style="margin-top: -205px;">
                 <div>
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
