--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -274,10 +274,11 @@
                 <div class="kingster-top-bar-container kingster-container ">
                     <div class="kingster-top-bar-container-inner clearfix">
                         <div class="kingster-top-bar-left kingster-item-pdlr"><i class="fa fa-envelope-open-o"
-                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i> Info@raffles-me.com <i
+                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a>  <i
                                 class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                            +966 11 281 5126</div>
+                            <a href="tel:+966 11 281 5126">+966 11 281 5126</a>
+                                </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <!-- <ul id="kingster-top-bar-menu"
                                         class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
@@ -514,7 +515,7 @@
                                     <li class="menu-item kingster-normal-menu"><a
                                             href="scholarships.html">Scholarships</a>
                                     </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="#">Admission
+                                    <li class="menu-item kingster-normal-menu"><a href="admission.html">Admission
                                         </a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="contact.html">Contact Us
                                         </a></li>
@@ -640,7 +641,46 @@
                                     institute reserves the rights to regularly review and make changes to the curriculum
                                     without prior notice.
                                 </p>
-                                
+                                <p class="p-about4" style="font-weight: 500;">5. Examinations and Evaluations</p>
+                                <p class="p-about5">To qualify for various Raffles College of Higher Education awards,
+                                    students will be required to successfully complete various course work,
+                                    examinations, projects, industrial attachment programme, and other forms of
+                                    evaluation prescribed in the various programmes offered by the institute. Various
+                                    conditions apply to the eligibility for examinations. Students will only be admitted
+                                    to examinations provided that the student has (1) met all current financial
+                                    obligations and (2) fulfilled the requirements of the course leading to the
+                                    examinations. Examinations are administered at scheduled times and students must
+                                    attend examinations. Students failing to attend examinations may be liable for a
+                                    separate Examination Fee to have an equivalent examination set, administered and
+                                    marked. Student assignments, projects and other institute related work may be
+                                    retained by the institute or project sponsors for a period of up to 6 months after
+                                    completion of study for marketing and promotional purposes.
+                                </p>
+                                <p class="p-about4" style="font-weight: 500;">6. Limitations of Liability</p>
+                                <p class="p-about5">Our student’s welfare and educational aspirations are of utmost
+                                    importance to us. We are committed to and will strive to ensure that all our
+                                    students shall receive a high quality education. However, if there is any liability
+                                    on the part of the institute, arising out of this Admission Agreement or in relation
+                                    to your tenure as a student in our institute, the liability of the institute shall
+                                    be limited to and shall not, in any case, exceed the aggregate amount of the Course
+                                    fees that you have paid to the Institute.
+                                </p>
+                                <p class="p-about4" style="font-weight: 500;">7. Raffles Design Institute English
+                                    Programme</p>
+                                <p class="p-about5">Classes are conducted in English and students are expected to be
+                                    proficient at a level that allows them to perform effectively in the programme.
+                                    Students applying for the Advanced Diploma must show evidence of IELTS 5.0 or
+                                    equivalent 550 for TOEFEL paper based. If not they have to go for Oxford On-Line
+                                    Placement Test and a separate English conversation test since all courses are
+                                    conducted in English. Students must have the ability to understand, speak and write
+                                    fluently in English. Students are required to pay the Course Fee stated in the
+                                    "Course Fees Payment Schedule
+                                </p>
+                                <p class="p-about4" style="font-weight: 500;">8. Classes</p>
+                                <p class="p-about5">Classes are scheduled on weekdays between 8 AM. TO 4 PM. And may be
+                                    subject to change at the discretion of the institute when deemed necessary.
+                                </p>
+
                             </div>
                         </div>
                     </div>
@@ -739,12 +779,7 @@
                             </div>
                         </div>
                     </div> -->
-                    <div class="gdlr-core-pbf-wrapper " style="padding: 115px 0px 40px 0px;">
-                        <div class="gdlr-core-pbf-background-wrap"></div>
-                        <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
-
-                        </div>
-                    </div>
+                    
 
 
                 </div>
