--- a/gallery.html
+++ b/gallery.html
@@ -274,10 +274,11 @@
                 <div class="kingster-top-bar-container kingster-container ">
                     <div class="kingster-top-bar-container-inner clearfix">
                         <div class="kingster-top-bar-left kingster-item-pdlr"><i class="fa fa-envelope-open-o"
-                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i> Info@raffles-me.com <i
+                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a>  <i
                                 class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                            +966 11 281 5126</div>
+                            <a href="tel:+966 11 281 5126">+966 11 281 5126</a>
+                                </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <!-- <ul id="kingster-top-bar-menu"
                                         class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
@@ -513,7 +514,7 @@
                                     </li> -->
                                     <li class="menu-item kingster-normal-menu"><a href="scholarships.html">Scholarships</a>
                                     </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="#">Admission
+                                    <li class="menu-item kingster-normal-menu"><a href="admission.html">Admission
                                         </a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="contact.html">Contact Us
                                         </a></li>
@@ -558,12 +559,17 @@
                     </div>
                 </div>
             </div>
-            <div class="kingster-page-title-wrap2  kingster-style-medium kingster-center-align">
+            <div class="kingster-page-title-wrap  kingster-style-medium kingster-left-align" style="background-image: url(img/Gallery/Slider-15.png);">
                 <div class="kingster-header-transparent-substitute"></div>
-                <div class="kingster-page-title-overlay"></div>
+                <!-- <div class="kingster-page-title-overlay"></div> -->
                 <div class="kingster-page-title-container kingster-container">
                     <div class="kingster-page-title-content kingster-item-pdlr">
-                        <h1 class="kingster-page-title">Gallery</h1>
+                        <!-- <div class="kingster-page-caption">News & Updates</div> -->
+                        <!-- <h1 class="kingster-page-title">Programmes</h1> -->
+                        <div class="gdlr-core-title-item-title-wrap clearfix centerdiv">
+                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 55px ;font-weight: 500 ;letter-spacing: 0px ;text-transform: uppercase ;color: #EB8223 ;background-color: white;padding: 20px 40px 20px 40px;width: fit-content;">
+                                Gallery</h3>
+                        </div>
                     </div>
                 </div>
             </div>
