--- a/scholarships.html
+++ b/scholarships.html
@@ -274,10 +274,11 @@
                 <div class="kingster-top-bar-container kingster-container ">
                     <div class="kingster-top-bar-container-inner clearfix">
                         <div class="kingster-top-bar-left kingster-item-pdlr"><i class="fa fa-envelope-open-o"
-                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i> Info@raffles-me.com <i
+                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a>  <i
                                 class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                            +966 11 281 5126</div>
+                            <a href="tel:+966 11 281 5126">+966 11 281 5126</a>
+                                </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <!-- <ul id="kingster-top-bar-menu"
                                         class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
@@ -513,7 +514,7 @@
                                     </li> -->
                                     <li class="menu-item current-menu-item kingster-normal-menu"><a href="scholarships.html">Scholarships</a>
                                     </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="#">Admission
+                                    <li class="menu-item kingster-normal-menu"><a href="admission.html">Admission
                                         </a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="contact.html">Contact Us
                                         </a></li>
@@ -606,7 +607,7 @@
             </a>
         </div>
 
-        <section class="subscription-block">
+        <section class="subscription-block" style="margin-top: -213px;">
             <div>
                 <div class="subscribe-box">
                     <div class="inner wow fadeIn">
